
  * "Inns don't revive dead heroes" bitset now works on all Inns (bug 23)

  * "Level up for (hero)" and "(#) levels for (hero)" battle text is now
    customizable (bug 46)

  * Fixed misspellings of "enemies" as in plotscripting commands "suspend
    random enemies" and "resume random enemies" (Misspelled versions
    still work for backwards compatability)

  * New plotscripting commands: save in slot, last save slot, auto save.
    Thanks to Yuriy (Draknight) and Ralph Versteegen (TeeEmCee)

  * It is now possible to display the save menu without actually saving
    using "save menu (false)"

  * New plotscripting commands: init mouse, mouse pixel x, mouse pixel
    y, mouse button, put mouse, mouse region, NPC at pixel
    Thanks to Ralph Versteegen (TeeEmCee)

  * Very nice plotscript buffer usage optimization. Scripts that run more
    than once take no extra space in the buffer, allowing you to write
    recursive scripts without fear of buffer-overflow. Thanks to Ralph
    Versteegen (TeeEmCee)

  * Bugs fixed thanks to help from Simon Bradley

    * "equip where" plotscripting command always uses hero #0's
       equipability data no matter which hero you specify

  * Bugs fixed thanks to help from Ralph Versteegen (TeeEmCee)

    * bug  1: item-based stat increases go away after level-up
    * bug 32: blank exp/gold box after battle when you earn no exp/gold
    * bug 47: Off by one bug in assigning script buffer and heap wastes
              memory
    * bug 54: Aim math text for Magic damage in CUSTOM is incorrect

  * Bugs fixed thanks to help from Mike Caron (pkmnfrk)

    * bug 40: Maps can be resized to invalid dimensions
    * bug 35: enemy spawned backwards in place of"flee-instead-of-die"...
    * bug 20: CUSTOM does no error checking for NPCs that point to text
              boxes that have been deleted

  * Code cleanup (things that only developers will notice)

     * Cleaned up build system to make it possible for people other than